[gd_scene load_steps=3 format=2]

[ext_resource path="res://Server.gd" type="Script" id=1]
[ext_resource path="res://LeaderBoard.gd" type="Script" id=2]

[node name="Networking" type="Node"]
script = ExtResource( 1 )

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[node name="GameTimer" type="Timer" parent="."]
one_shot = true

[node name="EndScreenTimer" type="Timer" parent="."]
one_shot = true

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer"]
margin_left = 362.0
margin_top = 276.0
margin_right = 662.0
margin_bottom = 324.0
rect_min_size = Vector2( 300, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="Control/CenterContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 24.0
align = 1
placeholder_text = "server port"

[node name="Button" type="Button" parent="Control/CenterContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 300.0
margin_bottom = 48.0
text = "start server"

[node name="LeaderBoard" type="HTTPRequest" parent="."]
script = ExtResource( 2 )
[connection signal="text_changed" from="Control/CenterContainer/VBoxContainer/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/Button" to="." method="_on_Create_pressed"]
